--- a/whisper/docker-compose.yml
+++ b/whisper/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     restart: always
     ports:
       - "5001:5001"
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:5001/health || exit 1" ]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
     deploy:
       resources:
         reservations:
