Finally fix torchcodec problems

--- a/whisper/Dockerfile
+++ b/whisper/Dockerfile
@@ -1,4 +1,4 @@
-FROM pytorch/pytorch:2.9.1-cuda13.0-cudnn9-runtime
+FROM pytorch/pytorch:2.8.0-cuda12.9-cudnn9-runtime
 
 # install packages for health check and audio processing
 RUN apt-get update \
@@ -11,9 +11,7 @@ WORKDIR /app
 # install regular dependencies
 RUN pip3 install -r requirements.txt --no-cache-dir
 
-RUN pip3 install torchaudio torchcodec --extra-index-url https://download.pytorch.org/whl/cu130
-
-#RUN pip3 install --force-reinstall markupsafe==2.0.1
+RUN pip3 install torchaudio --extra-index-url https://download.pytorch.org/whl/cu129
 
 EXPOSE 5001
 
